--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bulma": "^0.9.0",
-    "konva": "^6.0.0",
+    "immutability-helper": "^3.1.1",
+    "konva": "^7.0.3",
     "lodash": "^4.17.15",
     "pixi.js": "^5.3.0",
     "react": "^16.13.1",
