--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "konva": "^7.0.3",
     "lodash": "^4.17.15",
     "popper.js": "^1.16.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
